Grab all message IDs in one go. Actually pass new messages to procmail. Allow an extension argument for procmail to be specified.

--- a/notsync.cfg.sample
+++ b/notsync.cfg.sample
@@ -6,8 +6,10 @@ debug = True
 host = imap.gmail.com
 user = dme@dme.org
 password = Sc4nvtr
+extension = dme
 
 [snood.com]
 host = imap.snood.com
 user = david.edmondson
 password = Sc4nvtr
+extension = snood
